<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLink"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vel.dar.her.tododeportes.MainActivity"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:id="@+id/scrolPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--PRIMERA VISTA-->
            <LinearLayout
                android:id="@+id/vistaApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/tv01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/mensajeBienvenida"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/tv02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/instruccion"
                    android:textAlignment="center"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/et01"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="33dp"
                    android:hint="@string/hintEditText01"
                    android:singleLine="true"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btVerificar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="11dp"
                    android:elevation="30dp"
                    android:gravity="center"
                    android:text="@string/textButonVerificar"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/tvResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="30dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvResultado2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:elevation="30dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btLimpiar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:elevation="30dp"
                    android:gravity="center"
                    android:text="@string/textButonLimpiar"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp" />
            </LinearLayout>

            <!--SEGUNDA VISTA-->
            <LinearLayout
                android:id="@+id/vistaInstrucciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:elevation="20dp"
                    android:text="@string/queEsPalindromoApp"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/acercaDePalindromoApp"
                    android:textAlignment="center"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:elevation="20dp"
                    android:text="@string/preguntaPalindromo"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/respuestaPalindromo"
                    android:textAlignment="center"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="20dp"
                    android:text="@string/tgInstrucciones"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/instrucionDescripcion"
                    android:textAlignment="center"
                    android:textSize="16dp" />

            </LinearLayout>

            <!--VISTA FIJA-->

            <LinearLayout
                android:id="@+id/vistaFija"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vistaInstrucciones"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <!--SEPARADOR-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />


                <ToggleButton
                    android:id="@+id/toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elegantTextHeight="false"
                    android:textOff="@string/tgApp"
                    android:textOn="@string/tgInstrucciones" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:text="@string/autor"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/version"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12dp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>